# habit-tracker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  email_user_manager.py  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py
